--- a/index.html
+++ b/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Workshop</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </head>
 <body>
+
+    <!-- Navigation -->
+        <div>
+            <a href="Navigation"></a>
+            <a href="Navigation"></a>
+            <a href="Navigation"></a>
+        </div>
+        
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, ab at! Eaque hic nostrum numquam, assumenda doloremque veniam itaque recusandae necessitatibus fugiat dignissimos quasi voluptate facere accusamus pariatur, laborum dolore!
+        </div>
+        <div>
+            <img src="" alt="">
+        </div>
+
+    <!-- Wrapper -->
+    <section>
+        Wrapper
+    </section>
     
+    <!-- Experience -->
+    <section>
+        Experience
+    </section>
 </body>
 </html>
