--- a/index.html
+++ b/index.html
@@ -1,35 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
-    <title>Practice1.com</title>
-  </head>
-  <body>
-    <div class="d-flex flex-wrap justify-content-center align-items-center d">
-    <div class="col-md-5">
-    <img src="https://www.gauravghai.dev/images/profilepic.jpg" style="border-radius:50%; height:300px; width:300px;">
-    </div>
-    
-    <div class="col-md-5">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore est soluta nemo, pariatur ipsa eius possimus cupiditate distinctio, voluptatibus repellendus dignissimos nulla, ratione perferendis atque in? Sapiente ea, explicabo. Animi dicta commodi, pariatur repellat! Odio necessitatibus iusto quidem quia reprehenderit maiores nulla a. Iusto, voluptatibus aliquam, quod suscipit voluptates natus.</p>
-    </div>
-    </div>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
-    -->
-  </body>
+      <!-- 1st section -->
+    <div class="d-flex hero">
+        <div class="col-6">
+            <img src="./images/hero.jpeg" alt="">
+        </div>
+        <div class="col-6 inner-text">
+            <div class="sub-inner">
+                <div>
+                    <h1>I'm Your Name. <br> A UI Developer <br> based in India.</h1>
+                    <p>I’m probably the most passionate designer you will ever get to work with. If you have a great project that needs some amazing skills, I’m your guy.</p>
+                </div>
+            </div>
+        </div>  
+    </div>
+
+    <div class="container py-5">
+        <p>WORK EXPERIENCE</p>
+        <h2 class="text-white">Companies I have worked for in the past.</h2>
+        <div class="d-flex">
+            <div class="col-4">
+                <p class="text-white">01</p>
+                <p class="text-white">Google, Interaction Designer</p>
+                <p class="text-white">I currently am the lead designer on the interaction design team for Google Play.</p>
+            </div>
+            <div class="col-4">
+                <p class="text-white">01</p>
+                <p class="text-white">Google, Interaction Designer</p>
+                <p class="text-white">I currently am the lead designer on the interaction design team for Google Play.</p>
+            </div>
+            <div class="col-4">
+                <p class="text-white">01</p>
+                <p class="text-white">Google, Interaction Designer</p>
+                <p class="text-white">I currently am the lead designer on the interaction design team for Google Play.</p>
+            </div>
+        </div>
+    </div>
+
+</body>
 </html>
