--- a/index.html
+++ b/index.html
@@ -5,31 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="description" content="Html Hints provides 100% tested & hand coded tutorials for beginners & advanced in practical examples. Web Development tips, programming tricks and more!">
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-</head>
+  </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-            </ul>
-          </div>
+  <div class="navbar-section">
+    <nav class="navbar navbar-expand-lg custom-nav p-0">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse px-5" id="navbarNav">
+          <ul class="navbar-nav ms-auto p-0">
+            <li class="nav-item py-4">
+              <a class="px-3 active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item py-4">
+              <a class="px-3" href="#">Features</a>
+            </li>
+            <li class="nav-item py-4 contact-highlight">
+              <a class="px-3" href="#">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+  </div>
 
       <!-- 1st section -->
     <div class="d-flex hero">
@@ -39,31 +42,31 @@
         <div class="col-6 inner-text">
             <div class="sub-inner">
                 <div>
-                    <h1>I'm Your Name. <br> A UI Developer <br> based in India.</h1>
-                    <p>I’m probably the most passionate designer you will ever get to work with. If you have a great project that needs some amazing skills, I’m your guy.</p>
+                    <h1><strong>I'm Your Name. <br> A UI Developer <br> based in India.</strong></h1>
+                    <p class="sub-head">I’m probably the most passionate designer you will ever get to work with. If you have a great project that needs some amazing skills, I’m your guy.</p>
                 </div>
             </div>
         </div>  
     </div>
 
-    <div class="container py-5">
-        <p>WORK EXPERIENCE</p>
-        <h2 class="text-white">Companies I have worked for in the past.</h2>
+    <div class="container py-5 work">
+        <p class="m-0" style="color: #8491a0">WORK EXPERIENCE</p>
+        <h2 class="text-white col-7"><strong>Companies I have worked for in the past.</strong></h2>
         <div class="d-flex">
             <div class="col-4">
-                <p class="text-white">01</p>
-                <p class="text-white">Google, Interaction Designer</p>
-                <p class="text-white">I currently am the lead designer on the interaction design team for Google Play.</p>
+                <p class="sub-head m-0" style="color: #8491a0;">01</p>
+                <p class="text-white sub-head-1 col-7"><span class="green-color">Google</span>, Interaction Designer</p>
+                <p class="text-white col-8">I currently am the lead designer on the interaction design team for Google Play.</p>
             </div>
             <div class="col-4">
-                <p class="text-white">01</p>
-                <p class="text-white">Google, Interaction Designer</p>
-                <p class="text-white">I currently am the lead designer on the interaction design team for Google Play.</p>
+                <p class="sub-head m-0" style="color: #8491a0;">02</p>
+                <p class="text-white sub-head-1 col-7"><span style="color: #609bff">Facebook</span>, Product Designer</p>
+                <p class="text-white col-8">I currently am the lead designer on the interaction design team for Google Play.</p>
             </div>
             <div class="col-4">
-                <p class="text-white">01</p>
-                <p class="text-white">Google, Interaction Designer</p>
-                <p class="text-white">I currently am the lead designer on the interaction design team for Google Play.</p>
+                <p class="sub-head m-0" style="color: #8491a0;">03</p>
+                <p class="text-white sub-head-1 col-7"><span style="color: #e95d90;">Dribbble</span>, Graphic Designer</p>
+                <p class="text-white col-8">I currently am the lead designer on the interaction design team for Google Play.</p>
             </div>
         </div>
     </div>
