--- a/index.html
+++ b/index.html
@@ -71,5 +71,69 @@
         </div>
     </div>
 
+    <div class="article">
+      <div class="d-flex">
+        <div class="col-6 d-flex flex-wrap">
+          <div class="col-12 pt-5 mt-5 px-5">
+            <h2><strong>Philosophy & values</strong></h2>
+            <p>I think everyone wants the same thing - relationship with humanity, peace with the metaphysical, and experience with the universe. I try to grasp these things with my values: authenticity, creativity, & hospitality.</p>
+          </div>
+          <div class="col-12 px-5">
+            <button class="custom-btn">More about me</button>
+          </div>
+        </div>
+        <div class="col-6">
+          <img src="./images/article.jpg" alt="" class="w-100">
+        </div>
+      </div>
+    </div>
+
+    <div class="skillset container py-5">
+      <div class="d-flex pt-5">
+        <div class="col-4">
+          <h2 class="text-white"><strong>Skillset</strong></h2>
+          <p class="text-white col-10">With skills in over 4 different fields of design, I am the perfect person to hire when it comes to a full fledged project. Whatever your needs are, I can pretty much take on any challenge.</p>
+        </div>
+        <div class="col-8 d-flex flex-wrap">
+          <div class="col-6">
+            <img src="./images/skill1.svg" alt="">
+            <h4 class="text-white pt-4"><strong>Product Design</strong></h4>
+            <p class="text-white col-10">Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+          </div>
+          <div class="col-6">
+            <img src="./images/skill1.svg" alt="">
+            <h4 class="text-white pt-4"><strong>Product Design</strong></h4>
+            <p class="text-white col-10">Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+          </div>
+          <div class="col-6">
+            <img src="./images/skill1.svg" alt="">
+            <h4 class="text-white pt-4"><strong>Product Design</strong></h4>
+            <p class="text-white col-10">Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+          </div>
+          <div class="col-6">
+            <img src="./images/skill1.svg" alt="">
+            <h4 class="text-white pt-4"><strong>Product Design</strong></h4>
+            <p class="text-white col-10">Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="slider py-5">
+      <div class="d-flex">
+        <div class="col-3 text-center py-5">
+          <img src="./images/slider.svg" class="" alt="">
+        </div>
+        <div class="col-3 text-center py-5">
+          <img src="./images/slider.svg" class="" alt="">
+        </div>
+        <div class="col-3 text-center py-5">
+          <img src="./images/slider.svg" class="" alt="">
+        </div>
+        <div class="col-3 text-center py-5">
+          <img src="./images/slider.svg" class="" alt="">
+        </div>
+      </div>
+    </div>
 </body>
 </html>
