--- a/index.html
+++ b/index.html
@@ -135,5 +135,58 @@
         </div>
       </div>
     </div>
+
+    <div class="contact container py-5">
+      <div class="d-flex">
+        <div class="col-6">
+          <h2 class="text-white"><strong>Philosophy & values</strong></h2>
+          <p class="text-white col-10">Now that you know a lot about me, let me know if you are interested to work with me.</p>
+        </div>
+        <div class="col-6">
+          <form onsubmit="return false">
+            <div class="mb-3">
+              <label for="exampleInputPassword1" class="form-label text-white">Name</label>
+              <input type="text" class="form-control" id="name" placeholder="Enter Your Name">
+              <p class="text-white"><small id="name_error_msg"></small></p>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label text-white">Email address</label>
+              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter Your Email">
+            </div>
+            <div class="form-group mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label text-white">Example textarea</label>
+              <textarea class="form-control" id="message" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary col-12" onclick="test()">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      function test() {
+        let name = document.getElementById('name').value;
+        let email = document.getElementById('email').value;
+        let message = document.getElementById('message').value;
+        document.getElementById('name_error_msg').innerText = '';
+        if(name == ''){
+          document.getElementById('name_error_msg').innerText = 'Please fill name field';
+          document.getElementById('name_error_msg').classList.add("mystyle");
+          document.getElementById('name_error_msg').style.color = "red";
+        } else if(email == '') {
+          alert('Please fill email field');
+        } else if(message == '') {
+          alert('Please fill message field');
+        } else {
+          alert('Form Submitted');
+        }
+      }
+
+      for(i = 0; i <= 5; i++) {
+        console.log(i);
+      }
+    </script>
+
+
 </body>
 </html>
