--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
       <!-- 1st section -->
     <div class="d-flex hero">
-        <div class="col-6">
+        <div class="col-md-6 col-12">
             <img src="./images/hero.jpeg" alt="">
         </div>
-        <div class="col-6 inner-text">
-            <div class="sub-inner">
+        <div class="col-md-6 col-12 inner-text">
+            <div class="sub-inner px-md-auto px-3 pt-md-auto pt-4">
                 <div>
                     <h1><strong>I'm Your Name. <br> A UI Developer <br> based in India.</strong></h1>
                     <p class="sub-head">I’m probably the most passionate designer you will ever get to work with. If you have a great project that needs some amazing skills, I’m your guy.</p>
@@ -48,22 +48,21 @@
             </div>
         </div>  
     </div>
-
-    <div class="container py-5 work">
+    <div class="container py-5 work px-md-auto px-3">
         <p class="m-0" style="color: #8491a0">WORK EXPERIENCE</p>
-        <h2 class="text-white col-7"><strong>Companies I have worked for in the past.</strong></h2>
-        <div class="d-flex">
-            <div class="col-4">
+        <h2 class="text-white col-md-7 col-12"><strong>Companies I have worked for in the past.</strong></h2>
+        <div class="d-flex flex-wrap">
+            <div class="col-md-4 col-12">
                 <p class="sub-head m-0" style="color: #8491a0;">01</p>
                 <p class="text-white sub-head-1 col-7"><span class="green-color">Google</span>, Interaction Designer</p>
                 <p class="text-white col-8">I currently am the lead designer on the interaction design team for Google Play.</p>
             </div>
-            <div class="col-4">
+            <div class="col-md-4 col-12">
                 <p class="sub-head m-0" style="color: #8491a0;">02</p>
                 <p class="text-white sub-head-1 col-7"><span style="color: #609bff">Facebook</span>, Product Designer</p>
                 <p class="text-white col-8">I currently am the lead designer on the interaction design team for Google Play.</p>
             </div>
-            <div class="col-4">
+            <div class="col-md-4 col-12">
                 <p class="sub-head m-0" style="color: #8491a0;">03</p>
                 <p class="text-white sub-head-1 col-7"><span style="color: #e95d90;">Dribbble</span>, Graphic Designer</p>
                 <p class="text-white col-8">I currently am the lead designer on the interaction design team for Google Play.</p>
@@ -72,45 +71,45 @@
     </div>
 
     <div class="article">
-      <div class="d-flex">
-        <div class="col-6 d-flex flex-wrap">
-          <div class="col-12 pt-5 mt-5 px-5">
+      <div class="d-flex flex-wrap">
+        <div class="col-md-6 col-12 d-flex flex-wrap">
+          <div class="col-12 pt-md-5 pt-0 mt-md-5 mt-2 px-md-5 px-2">
             <h2><strong>Philosophy & values</strong></h2>
             <p>I think everyone wants the same thing - relationship with humanity, peace with the metaphysical, and experience with the universe. I try to grasp these things with my values: authenticity, creativity, & hospitality.</p>
           </div>
-          <div class="col-12 px-5">
+          <div class="col-12 px-md-5 px-2 pb-2">
             <button class="custom-btn">More about me</button>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-12">
           <img src="./images/article.jpg" alt="" class="w-100">
         </div>
       </div>
     </div>
 
-    <div class="skillset container py-5">
-      <div class="d-flex pt-5">
-        <div class="col-4">
+    <div class="skillset container py-md-5 py-2 px-md-auto px-3">
+      <div class="d-flex flex-wrap pt-5">
+        <div class="col-md-4 col-12">
           <h2 class="text-white"><strong>Skillset</strong></h2>
           <p class="text-white col-10">With skills in over 4 different fields of design, I am the perfect person to hire when it comes to a full fledged project. Whatever your needs are, I can pretty much take on any challenge.</p>
         </div>
-        <div class="col-8 d-flex flex-wrap">
-          <div class="col-6">
+        <div class="col-md-8 col-12 d-flex flex-wrap">
+          <div class="col-md-6 col-12">
             <img src="./images/skill1.svg" alt="">
             <h4 class="text-white pt-4"><strong>Product Design</strong></h4>
             <p class="text-white col-10">Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
           </div>
-          <div class="col-6">
+          <div class="col-md-6 col-12">
             <img src="./images/skill1.svg" alt="">
             <h4 class="text-white pt-4"><strong>Product Design</strong></h4>
             <p class="text-white col-10">Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
           </div>
-          <div class="col-6">
+          <div class="col-md-6 col-12">
             <img src="./images/skill1.svg" alt="">
             <h4 class="text-white pt-4"><strong>Product Design</strong></h4>
             <p class="text-white col-10">Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
           </div>
-          <div class="col-6">
+          <div class="col-md-6 col-12">
             <img src="./images/skill1.svg" alt="">
             <h4 class="text-white pt-4"><strong>Product Design</strong></h4>
             <p class="text-white col-10">Working at Facebook has taught me a lot about how to understand users, solve problems and build great products.</p>
@@ -136,13 +135,13 @@
       </div>
     </div>
 
-    <div class="contact container py-5">
-      <div class="d-flex">
-        <div class="col-6">
+    <div class="contact container py-md-5 py-2">
+      <div class="d-flex flex-wrap">
+        <div class="col-md-6 col-12">
           <h2 class="text-white"><strong>Philosophy & values</strong></h2>
           <p class="text-white col-10">Now that you know a lot about me, let me know if you are interested to work with me.</p>
         </div>
-        <div class="col-6">
+        <div class="col-md-6 col-12 pt-md-auto pt-3">
           <form onsubmit="return false">
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label text-white">Name</label>
@@ -180,10 +179,6 @@
         } else {
           alert('Form Submitted');
         }
-      }
-
-      for(i = 0; i <= 5; i++) {
-        console.log(i);
       }
     </script>
 
